# the-inbox-orchestrator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  spec.yaml
.cargo/: config.toml
.github/workflows/: audit.yml  general.yml
.sqlx/: query-6a865995477a92bb77ba43c9b12f95a6b70d989ca6e9c17f43d3e75396eba4a5.json
configuration/: base.yaml  production.yaml
migrations/: 20240211041853_create_subscriptions_table.sql  20240215170708_add_subscriptions_token_table.sql  20240225142519_rename_password_column.sql  20240301094052_seed_user.sql  20240306025336_relax_null_check_on_idempotency.sql  20240306041801_create_newsletter_issues_table.sql  20240306043008_create_issue_delivery_queue_table.sql  20240306130748_add_n_retries_to_issue_delivery_table.sql
scripts/: Dockerfile  init_db.sh  init_redis.sh
src/: authentication.rs  configurations.rs  email_client.rs  issues_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_username.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
