[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path="src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.5.1"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
config="0.14"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate" ] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber =  { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7.9"
serde-aux = "4.4.0"
unicode-segmentation = "1.11.0"
validator = "0.16.1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
rand = { version = "0.8", features=["std_rng"] }
thiserror = "1.0.57"
anyhow = "1.0.80"
base64 = "0.21.7"
sha3 = "0.10.8"
argon2 = { version = "0.5.3", features=["std"]}
urlencoding = "2.1.3"
htmlescape = "0.3.1"
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"]}
serde_json = "1"
futures-util = "0.3.30"
actix-web-lab = "0.20.2"
[dependencies.actix-session]
git = "https://github.com/actix/actix-extras"
branch = "master"
features = ["redis-rs-tls-session"]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
once_cell = "1"
claims = "0.7.1"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5"
serde_json = "1"
linkify = "0.8"
serde_urlencoded = "0.7.1"
